objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__ActionType__c</fullName>
        <label>Action Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CampaignName__c</fullName>
        <formula>Campaign.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CampaignOmniScriptURL__c</fullName>
        <formula>&quot;/apex/%nsp%OmniScriptUniversalPage?layout=lightning&amp;id=&quot; &amp; Id &amp; &quot;&amp;campaignId=&quot; &amp;  CampaignId &amp; &quot;#/OmniScriptType/&quot; &amp;  Campaign.vlocity_cmt__ProcessType__c &amp; &quot;/OmniScriptSubType/&quot; &amp; Campaign.vlocity_cmt__ProcessSubType__c &amp; &quot;/OmniScriptLang/&quot; &amp; Campaign.vlocity_cmt__ProcessLanguage__c &amp; &quot;/ContextId/&quot;&amp; Id &amp; &quot;/PrefillDataRaptorBundle/&quot;+ Campaign.vlocity_cmt__ProcessPrefillBundle__c +&quot;/false&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign OmniScript URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CampaignStatus__c</fullName>
        <formula>TEXT(Campaign.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CampaignType__c</fullName>
        <formula>TEXT(Campaign.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <formula>Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EmailTemplate__c</fullName>
        <formula>Campaign.vlocity_cmt__EmailTemplate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastCallDate__c</fullName>
        <label>Last Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartDate__c</fullName>
        <formula>Campaign.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TargetCallDate__c</fullName>
        <label>Target Call Date</label>
        <type>DateTime</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>